[package]
name = "rnmon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ndarray = "^0.16"
tabled = "^0.18"
askama = "^0.13"
rand = "^0.9.0"
ndarray-stats = "^0.6"