[package]
name = "rssh"
version = "0.1.2"
edition = "2024"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
regex = "^1.11"
tokio = { version = "1", features = ["process"] }
async-ssh2-tokio = "^0.10"
